k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navatech-app
  labels:
    name: navatech-app
